--- a/src/main/resources/Frontend/FrontEspace.fxml
+++ b/src/main/resources/Frontend/FrontEspace.fxml
@@ -39,18 +39,15 @@
                 </HBox>
 
                 <!-- Icônes à l'extrême droite -->
-                <HBox spacing="15.0" style="-fx-alignment: right; -fx-margin-left: auto;">
-                    <ImageView fx:id="cartIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <Button fx:id="btnLogout" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-padding: 0;">
+                <graphic>
+                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="/images/reserver.png"/>
+                            <Image url="/images/logout.png"/>
                         </image>
                     </ImageView>
-                    <ImageView fx:id="profileIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="/images/profile.png"/>
-                        </image>
-                    </ImageView>
-                </HBox>
+                </graphic>
+            </Button>
             </children>
         </HBox>
 
