--- a/src/main/resources/Frontend/FrontBillet.fxml
+++ b/src/main/resources/Frontend/FrontBillet.fxml
@@ -36,8 +36,9 @@
 
                 <!-- Menu interactif -->
                 <HBox fx:id="navBar" spacing="20.0" style="-fx-alignment: center; -fx-padding: 0 20px; -fx-margin-left: auto;">
-                    <Button fx:id="btnAccueil" text="🏠 Accueil" onAction="#goToAcceuil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
-                    <Button fx:id="btnEvenements" text="📅 Événements" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnAccueil" onAction="#goToAcceuil" text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnEvenements" onAction="#goToEvents" text="📅 Événements"  style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnEspace" onAction="#goToEspaces" text="📌 Espaces"  style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                 </HBox>
             </children>
         </HBox>
@@ -65,11 +66,17 @@
                             </items>
                         </ComboBox>
 
+
                         <Label text="🎟 Événement :" textFill="white" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                         <ComboBox fx:id="eventSelection" promptText="Sélectionner un événement" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                     </children>
                 </GridPane>
-                <Button text="✔ Confirmer la Réservation"  onAction="#createBilletFront" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-border-radius: 12px; -fx-padding: 10px;"/>
+                <Label fx:id="billetDescription" text="Sélectionnez un type de billet" textFill="white"
+                       style="-fx-font-size: 14px; -fx-font-weight: bold; -fx-background-color: rgba(0,0,0,0.5);
+              -fx-text-fill: white; -fx-padding: 5px; -fx-border-radius: 5px;"
+                       GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+
+                <Button text="✔ Confirmer la Réservation"  onAction="#createBilletFront" style="-fx-background-color: #F39C12; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-border-radius: 12px; -fx-padding: 10px;"/>
             </children>
         </VBox>
     </children>
