--- a/Pi-Javafx-Symfony-yahya/src/main/resources/Frontend/FrontEvents.fxml
+++ b/Pi-Javafx-Symfony-yahya/src/main/resources/Frontend/FrontEvents.fxml
@@ -39,15 +39,19 @@
 
                 </HBox>
 
-                <Button fx:id="btnLogout" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-padding: 0;">
-                    <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="/images/logout.png"/>
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
+                <!-- Icônes à l'extrême droite -->
+                <HBox spacing="15.0" style="-fx-alignment: right; -fx-margin-left: auto;">
+                    <ImageView fx:id="cartIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="/images/reserver.png"/>
+                        </image>
+                    </ImageView>
+                    <ImageView fx:id="profileIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="/images/profile.png"/>
+                        </image>
+                    </ImageView>
+                </HBox>
             </children>
         </HBox>
 
