--- a/src/main/resources/AfficheReservation.fxml
+++ b/src/main/resources/AfficheReservation.fxml
@@ -43,7 +43,7 @@
 
                     style="-fx-background-color: transparent; -fx-text-fill: #a868a0;
                            -fx-font-size: 16px; -fx-border-radius: 10px; -fx-padding: 12px 20px;"/>
-
+            <Button text="Exporter en Excel" onAction="#exportReservations"/>
 
         </children>
     </VBox>
@@ -68,10 +68,9 @@
                            style="-fx-border-radius: 10px; -fx-background-radius: 10px; -fx-padding: 10px;
                                   -fx-border-color: white; -fx-background-color: rgba(255, 255, 255, 0.3);"/>
 
-                <Button text="📂 Export" onAction="#exportReservations"
-                        style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 14px;"/>
+                <Button text="Rechercher" onAction="#searchReservations"
+                        style="-fx-background-color: #8e44ad; -fx-text-fill: white; -fx-border-radius: 10px; -fx-padding: 10px;"/>
             </HBox>
-
 
             <!-- 📌 Zone d'affichage des réservations -->
             <ScrollPane fitToWidth="true" fitToHeight="true" hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED"
