--- a/src/main/resources/FrontAcceuil.fxml
+++ b/src/main/resources/FrontAcceuil.fxml
@@ -32,7 +32,7 @@
                     <Button fx:id="btnAccueil" onAction="#goToAcceuil" text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                     <Button fx:id="btnEvenements" onAction="#goToEvents" text="📅 Événements" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                     <Button fx:id="btnEspace" onAction="#goToEspaces" text="📌 Espaces" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
-                    <Button fx:id="btnProduit" onAction="#goToProduit" text="📌 produit" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnProduit" onAction="#goToProduit" text="🛍️ Produits" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
 
                 </HBox>
                 <Button fx:id="btnLogout" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-padding: 0;">
@@ -53,7 +53,7 @@
                 onAction="#toggleChatbot"/>
 
         <!-- 🚀 Chatbot masqué par défaut -->
-        <VBox fx:id="chatbotContainer" layoutX="250.0" layoutY="420.0" prefWidth="500.0" prefHeight="350.0" spacing="10"
+        <VBox fx:id="chatbotContainer" layoutX="250.0" layoutY="180.0" prefWidth="500.0" prefHeight="350.0" spacing="10"
               style="-fx-padding: 15px; -fx-background-color: rgba(255,255,255,0.9); -fx-border-radius: 20px;
                         -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 4);"
               opacity="0" visible="false">
