--- a/src/main/resources/FrontAcceuil.fxml
+++ b/src/main/resources/FrontAcceuil.fxml
@@ -32,7 +32,7 @@
                     <Button fx:id="btnAccueil" onAction="#goToAcceuil" text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                     <Button fx:id="btnEvenements" onAction="#goToEvents" text="📅 Événements" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
                     <Button fx:id="btnEspace" onAction="#goToEspaces" text="📌 Espaces" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
-                    <Button fx:id="btnProduit" onAction="#goToProduit" text="📌 produit" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
+                    <Button fx:id="btnProduit" onAction="#goToProduit" text="🛍️ Produits" style="-fx-background-color: transparent; -fx-text-fill: #F39C12; -fx-border-radius: 10px; -fx-padding: 10px 18px;"/>
 
                 </HBox>
                 <Button fx:id="btnLogout" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-padding: 0;">
